--- a/contact.html
+++ b/contact.html
@@ -32,106 +32,102 @@
         <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
             <a class="navbar-brand" href="index">
                 <img src="assets/brand/logo-csi.jpg" width="40" height="40" class="d-inline-block align-top" alt="CSI Logo"> <span class="logo-title">CSI</span> </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="events">Events</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="gallery">Gallery</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="team">Team</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="contact">Contact <span class="sr-only">(current)</span></a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav ml-auto social-icons">
-                    <li>
-                        <a href="https://www.facebook.com/gitamcsi/" target="_blank" class="nav-link"><i class="fa fa-facebook fa-lg"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/csi_gitam/" target="_blank" class="nav-link"><i class="fa fa-instagram fa-lg"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.youtube.com/channel/UC3WGSLJhICY8pheX9GBikJg" target="_blank" class="nav-link"><i class="fa fa-youtube fa-lg"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/csigitam" target="_blank" class="nav-link"><i class="fa fa-github fa-lg"></i></a>
-                    </li>
-                    <li>
-                        <a href="credits" class="nav-link"><i class="fa fa-info fa-lg"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <div role="main">
-        <div class="jumbotron j-contact">
-            <div class="container">
-                <h1 class="display-3">Contact Us</h1>
-                <p>Do you have any interesting ideas you'd like to share? Got a plan to execute a project or an event? Get it to CSI, we will make it happen.
-                    <br> Any queries? Reach out to us!</p>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4">
-                    <h2>For enquries,</h2>
-                    <p></p>
-                    <p>Email us at <a href="mailto:teamcsi@gitam.edu">teamcsi@gitam.edu</a></p>
-                    <p><a class="btn btn-lg btn-primary" href="https://www.facebook.com/gitamcsi/" target="_blank" role="button">Contact us on Facebook &raquo;</a></p>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="events">Events</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="gallery">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="team">Team</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="contact">Contact <span class="sr-only">(current)</span></a>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav ml-auto social-icons">
+                        <li>
+                            <a href="https://www.facebook.com/gitamcsi/" target="_blank" class="nav-link"><i class="fa fa-facebook fa-lg"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/csi_gitam/" target="_blank" class="nav-link"><i class="fa fa-instagram fa-lg"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.youtube.com/channel/UC3WGSLJhICY8pheX9GBikJg" target="_blank" class="nav-link"><i class="fa fa-youtube fa-lg"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/csigitam" target="_blank" class="nav-link"><i class="fa fa-github fa-lg"></i></a>
+                        </li>
+                        <li>
+                            <a href="credits" class="nav-link"><i class="fa fa-info fa-lg"></i></a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-lg-8 g-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3799.2353112901123!2d83.37372529955334!3d17.780634695966484!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a395b1cdf012f1b%3A0x6c1c27dfb649611a!2sChandrahas+Bhavan%2C+Rushikonda%2C+Visakhapatnam%2C+Andhra+Pradesh+530045%2C+India!5e0!3m2!1sen!2sus!4v1508218001772" frameborder="0" allowfullscreen></iframe>
+            </nav>
+        </header>
+        <div role="main">
+            <div class="jumbotron j-contact">
+                <div class="container">
+                    <h1 class="display-3">Contact Us</h1>
+                    <p>Do you have any interesting ideas you'd like to share? Got a plan to execute a project or an event? Get it to CSI, we will make it happen.
+                        <br> Any queries? Reach out to us!</p>
+                    </div>
                 </div>
-            </div>
-            <hr class="featurette-divider">
-            <div class="row featurette">
-                <div class="col-md-12">
-                    <h2 class="featurette-heading">Got some questions? <span class="text-muted">Get in touch.</span></h2>
-                    <br>
-                    <table class="table table-hover table-borderless">
-                        <tbody>
-                            <tr>
-                                <td>Aditya</td>
-                                <td><a href="tel:+919542196003">+91 95421 96003</a></td>
-                            </tr>
-                            <tr>
-                                <td>Ajit</td>
-                                <td><a href="tel:+918895567749">+91 88955 67749</a></td>
-                            </tr>
-                            <tr>
-                                <td>Harsha</td>
-                                <td><a href="tel:+919652988096">+91 96529 88096</a></td>
-                            </tr>
-                            <tr>
-                                <td>Nikhil</td>
-                                <td><a href="tel:+918978087191">+91 89780 87191</a></td>
-                            </tr>
-                            <tr>
-                                <td>Subhash</td>
-                                <td><a href="tel:+919100062658">+91 91000 62658</a></td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <h2>For enquries,</h2>
+                            <p></p>
+                            <p>Email us at <a href="mailto:teamcsi@gitam.edu">teamcsi@gitam.edu</a></p>
+                            <p><a class="btn btn-lg btn-primary" href="https://www.facebook.com/gitamcsi/" target="_blank" role="button">Contact us on Facebook &raquo;</a></p>
+                        </div>
+                        <div class="col-lg-8 g-map">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3799.2353112901123!2d83.37372529955334!3d17.780634695966484!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a395b1cdf012f1b%3A0x6c1c27dfb649611a!2sChandrahas+Bhavan%2C+Rushikonda%2C+Visakhapatnam%2C+Andhra+Pradesh+530045%2C+India!5e0!3m2!1sen!2sus!4v1508218001772" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <hr class="featurette-divider">
+                    <div class="row featurette">
+                        <div class="col-md-12">
+                            <h2 class="featurette-heading">Got some questions? <span class="text-muted">Get in touch.</span></h2>
+                            <br>
+                            <table class="table table-hover table-borderless">
+                                <tbody>
+                                    <tr>
+                                        <td>Akhil</td>
+                                        <td><a href="tel:+917396602734">+91 73966 02734</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Shashidhar</td>
+                                        <td><a href="tel:+917330966475">+91 73309 66475</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Aditya</td>
+                                        <td><a href="tel:+919542196003">+91 95421 96003</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Harsha</td>
+                                        <td><a href="tel:+919652988096">+91 96529 88096</a></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <hr class="featurette-divider">
                 </div>
+                <footer class="container">
+                    <p>&copy; 2018-19 &mdash; Team CSI, GITAM Student Branch &middot; <a href="credits">Credits</a> &middot; <a href="https://github.com/csigitam/csigitam.github.io" target="_blank">GitHub</a> &middot; <a href="http://gitam.edu/in-campus/csi" target="_blank">CSI-GIT</a></p>
+                </footer>
             </div>
-            <hr class="featurette-divider">
-        </div>
-        <footer class="container">
-            <p>&copy; 2018-19 &mdash; Team CSI, GITAM Student Branch &middot; <a href="credits">Credits</a> &middot; <a href="https://github.com/csigitam/csigitam.github.io" target="_blank">GitHub</a> &middot; <a href="http://gitam.edu/in-campus/csi" target="_blank">CSI-GIT</a></p>
-        </footer>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-</body>
-
-</html>
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+        </body>
+        
+        </html>
