--- a/credits.html
+++ b/credits.html
@@ -32,137 +32,109 @@
         <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
             <a class="navbar-brand" href="index">
                 <img src="assets/brand/logo-csi.jpg" width="40" height="40" class="d-inline-block align-top" alt="CSI Logo"> <span class="logo-title">CSI</span> </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="events">Events</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="gallery">Gallery</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="team">Team</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact">Contact</a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav ml-auto social-icons">
-                    <li>
-                        <a href="https://www.facebook.com/gitamcsi/" target="_blank" class="nav-link"><i class="fa fa-facebook fa-lg"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/csi_gitam/" target="_blank" class="nav-link"><i class="fa fa-instagram fa-lg"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.youtube.com/channel/UC3WGSLJhICY8pheX9GBikJg" target="_blank" class="nav-link"><i class="fa fa-youtube fa-lg"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/csigitam" target="_blank" class="nav-link"><i class="fa fa-github fa-lg"></i></a>
-                    </li>
-                    <li>
-                        <a href="credits" class="nav-link"><i class="fa fa-info fa-lg"></i></a>
-                    </li>
-                </ul>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="events">Events</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="gallery">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="team">Team</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact">Contact</a>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav ml-auto social-icons">
+                        <li>
+                            <a href="https://www.facebook.com/gitamcsi/" target="_blank" class="nav-link"><i class="fa fa-facebook fa-lg"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/csi_gitam/" target="_blank" class="nav-link"><i class="fa fa-instagram fa-lg"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.youtube.com/channel/UC3WGSLJhICY8pheX9GBikJg" target="_blank" class="nav-link"><i class="fa fa-youtube fa-lg"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/csigitam" target="_blank" class="nav-link"><i class="fa fa-github fa-lg"></i></a>
+                        </li>
+                        <li>
+                            <a href="credits" class="nav-link"><i class="fa fa-info fa-lg"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <div role="main">
+            <div class="jumbotron j-credits">
+                <div class="container">
+                    <h1 class="display-3">Credits</h1>
+                    <p>This little hall of fame exists to acknowledge the people behind this website.</p>
+                </div>
             </div>
-        </nav>
-    </header>
-    <div role="main">
-        <div class="jumbotron j-credits">
-            <div class="container">
-                <h1 class="display-3">Credits</h1>
-                <p>This little hall of fame exists to acknowledge the people behind this website.</p>
+            <div class="container marketing">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <h2>Naveen Malla</h2>
+                        <p>Web Master</p>
+                        <p><a class="btn btn-danger btn-lg left-icon" href="mailto:naveenmalla046@gmail.com" target="_blank" role="button"><i class="fa fa-envelope"></i></a></p>
+                        <p><a class="btn btn-info btn-lg right-icon" href="https://www.linkedin.com/in/naveen-malla/" target="_blank" role="button"><i class="fa fa-linkedin"></i></a></p>
+                    </div>
+                    <div class="col-lg-4">
+                        <h2>Aditya Chattopadhyay</h2>
+                        <p>Web Developer, Graphic Designer</p>
+                        <p><a class="btn btn-danger btn-lg left-icon" href="mailto:adityasa99@gmail.com" target="_blank" role="button"><i class="fa fa-envelope"></i></a></p>
+                        <p><a class="btn btn-info btn-lg right-icon" href="https://www.linkedin.com/in/AdityaSA99/" target="_blank" role="button"><i class="fa fa-linkedin"></i></a></p>
+                    </div>
+                    <div class="col-lg-4">
+                        <h2>Ajit Panigrahi</h2>
+                        <p>Web Developer, Content Writer</p>
+                        <p><a class="btn btn-danger btn-lg left-icon" href="mailto:ajitzero@gmail.com" target="_blank" role="button"><i class="fa fa-envelope"></i></a></p>
+                        <p><a class="btn btn-info btn-lg right-icon" href="https://www.linkedin.com/in/AjitZero/" target="_blank" role="button"><i class="fa fa-linkedin"></i></a></p>
+                    </div>
+                </div>
+                <hr class="featurette-divider">
+                <div class="row featurette">
+                    <div class="col-md-12">
+                        <h2 class="featurette-heading">Got some questions? <span class="text-muted">Get in touch.</span></h2>
+                        <br>
+                        <table class="table table-hover table-borderless">
+                            <tbody>
+                                <tr>
+                                    <td>Akhil</td>
+                                    <td><a href="tel:+917396602734">+91 73966 02734</a></td>
+                                </tr>
+                                <tr>
+                                    <td>Shashidhar</td>
+                                    <td><a href="tel:+917330966475">+91 73309 66475</a></td>
+                                </tr>
+                                <tr>
+                                    <td>Aditya</td>
+                                    <td><a href="tel:+919542196003">+91 95421 96003</a></td>
+                                </tr>
+                                <tr>
+                                    <td>Harsha</td>
+                                    <td><a href="tel:+919652988096">+91 96529 88096</a></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <hr class="featurette-divider">
             </div>
+            <footer class="container">
+                <p>&copy; 2018-19 &mdash; Team CSI, GITAM Student Branch &middot; <a href="credits">Credits</a> &middot; <a href="https://github.com/csigitam/csigitam.github.io" target="_blank">GitHub</a> &middot; <a href="http://gitam.edu/in-campus/csi" target="_blank">CSI-GIT</a></p>
+            </footer>
         </div>
-        <div class="container marketing">
-            <div class="row">
-                <div class="col-lg-4">
-                    <h2>Naveen Malla</h2>
-                    <p>Web Master</p>
-                    <p><a class="btn btn-danger btn-lg left-icon" href="mailto:naveenmalla046@gmail.com" target="_blank" role="button"><i class="fa fa-envelope"></i></a></p>
-                    <p><a class="btn btn-info btn-lg right-icon" href="https://www.linkedin.com/in/naveen-malla/" target="_blank" role="button"><i class="fa fa-linkedin"></i></a></p>
-                </div>
-                <div class="col-lg-4">
-                    <h2>Aditya Chattopadhyay</h2>
-                    <p>Web Developer, Graphic Designer</p>
-                    <p><a class="btn btn-danger btn-lg left-icon" href="mailto:adityasa99@gmail.com" target="_blank" role="button"><i class="fa fa-envelope"></i></a></p>
-                    <p><a class="btn btn-info btn-lg right-icon" href="https://www.linkedin.com/in/AdityaSA99/" target="_blank" role="button"><i class="fa fa-linkedin"></i></a></p>
-                </div>
-                <div class="col-lg-4">
-                    <h2>Ajit Panigrahi</h2>
-                    <p>Web Developer, Content Writer</p>
-                    <p><a class="btn btn-danger btn-lg left-icon" href="mailto:ajitzero@gmail.com" target="_blank" role="button"><i class="fa fa-envelope"></i></a></p>
-                    <p><a class="btn btn-info btn-lg right-icon" href="https://www.linkedin.com/in/AjitZero/" target="_blank" role="button"><i class="fa fa-linkedin"></i></a></p>
-                </div>
-            </div>
-            <!-- <hr class="featurette-divider">
-
-            <div class="row featurette">
-                <div class="col-md-7">
-                    <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-                    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-                </div>
-                <div class="col-md-5">
-                    <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-                </div>
-            </div>
-
-            <hr class="featurette-divider">
-
-            <div class="row featurette">
-                <div class="col-md-7 order-md-2">
-                    <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-                    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-                </div>
-                <div class="col-md-5 order-md-1">
-                    <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-                </div>
-            </div> -->
-            <hr class="featurette-divider">
-            <div class="row featurette">
-                <div class="col-md-12">
-                    <h2 class="featurette-heading">Got some questions? <span class="text-muted">Get in touch.</span></h2>
-                    <br>
-                    <table class="table table-hover table-borderless">
-                        <tbody>
-                            <tr>
-                                <td>Aditya</td>
-                                <td><a href="tel:+919542196003">+91 95421 96003</a></td>
-                            </tr>
-                            <tr>
-                                <td>Ajit</td>
-                                <td><a href="tel:+918895567749">+91 88955 67749</a></td>
-                            </tr>
-                            <tr>
-                                <td>Harsha</td>
-                                <td><a href="tel:+919652988096">+91 96529 88096</a></td>
-                            </tr>
-                            <tr>
-                                <td>Nikhil</td>
-                                <td><a href="tel:+918978087191">+91 89780 87191</a></td>
-                            </tr>
-                            <tr>
-                                <td>Subhash</td>
-                                <td><a href="tel:+919100062658">+91 91000 62658</a></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <hr class="featurette-divider">
-        </div>
-        <footer class="container">
-            <p>&copy; 2018-19 &mdash; Team CSI, GITAM Student Branch &middot; <a href="credits">Credits</a> &middot; <a href="https://github.com/csigitam/csigitam.github.io" target="_blank">GitHub</a> &middot; <a href="http://gitam.edu/in-campus/csi" target="_blank">CSI-GIT</a></p>
-        </footer>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-</body>
-
-</html>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    </body>
+    </html>
