--- a/events.html
+++ b/events.html
@@ -340,24 +340,20 @@
 					<table class="table table-hover table-borderless">
 						<tbody>
 							<tr>
+								<td>Akhil</td>
+								<td><a href="tel:+917396602734">+91 73966 02734</a></td>
+							</tr>
+							<tr>
+								<td>Shashidhar</td>
+								<td><a href="tel:+917330966475">+91 73309 66475</a></td>
+							</tr>
+							<tr>
 								<td>Aditya</td>
 								<td><a href="tel:+919542196003">+91 95421 96003</a></td>
 							</tr>
 							<tr>
-								<td>Ajit</td>
-								<td><a href="tel:+918895567749">+91 88955 67749</a></td>
-							</tr>
-							<tr>
 								<td>Harsha</td>
 								<td><a href="tel:+919652988096">+91 96529 88096</a></td>
-							</tr>
-							<tr>
-								<td>Nikhil</td>
-								<td><a href="tel:+918978087191">+91 89780 87191</a></td>
-							</tr>
-							<tr>
-								<td>Subhash</td>
-								<td><a href="tel:+919100062658">+91 91000 62658</a></td>
 							</tr>
 						</tbody>
 					</table>
