--- a/gallery.html
+++ b/gallery.html
@@ -33,161 +33,157 @@
         <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
             <a class="navbar-brand" href="index">
                 <img src="assets/brand/logo-csi.jpg" width="40" height="40" class="d-inline-block align-top" alt="CSI Logo"> <span class="logo-title">CSI</span> </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="events">Events</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="gallery">Gallery <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="team">Team</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact">Contact</a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav ml-auto social-icons">
-                    <li>
-                        <a href="https://www.facebook.com/gitamcsi/" target="_blank" class="nav-link"><i class="fa fa-facebook fa-lg"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/csi_gitam/" target="_blank" class="nav-link"><i class="fa fa-instagram fa-lg"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.youtube.com/channel/UC3WGSLJhICY8pheX9GBikJg" target="_blank" class="nav-link"><i class="fa fa-youtube fa-lg"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/csigitam" target="_blank" class="nav-link"><i class="fa fa-github fa-lg"></i></a>
-                    </li>
-                    <li>
-                        <a href="credits" class="nav-link"><i class="fa fa-info fa-lg"></i></a>
-                    </li>
-                </ul>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="events">Events</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="gallery">Gallery <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="team">Team</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact">Contact</a>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav ml-auto social-icons">
+                        <li>
+                            <a href="https://www.facebook.com/gitamcsi/" target="_blank" class="nav-link"><i class="fa fa-facebook fa-lg"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/csi_gitam/" target="_blank" class="nav-link"><i class="fa fa-instagram fa-lg"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.youtube.com/channel/UC3WGSLJhICY8pheX9GBikJg" target="_blank" class="nav-link"><i class="fa fa-youtube fa-lg"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/csigitam" target="_blank" class="nav-link"><i class="fa fa-github fa-lg"></i></a>
+                        </li>
+                        <li>
+                            <a href="credits" class="nav-link"><i class="fa fa-info fa-lg"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <div role="main">
+            <div class="jumbotron j-gallery">
+                <div class="container">
+                    <h1 class="display-3">Gallery</h1>
+                    <p class="lead"><strong>As each year progresses, we take an initiative to make the students, staff and members ready to face the future with various technical, non-technical and course-related workshops, seminars &amp; events. <br><br> We take this opportunity to showcase some of the highlights of the events conducted by Team CSI!</strong></p>
+                </div>
             </div>
-        </nav>
-    </header>
-    <div role="main">
-        <div class="jumbotron j-gallery">
-            <div class="container">
-                <h1 class="display-3">Gallery</h1>
-                <p class="lead"><strong>As each year progresses, we take an initiative to make the students, staff and members ready to face the future with various technical, non-technical and course-related workshops, seminars &amp; events. <br><br> We take this opportunity to showcase some of the highlights of the events conducted by Team CSI!</strong></p>
+            <div class="container marketing">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <a href="assets/gallery/001.png" data-toggle="lightbox" data-gallery="gallery">
+                            <img class="img img-thumbnail img-fluid " src="assets/gallery/thumbs/001.png">
+                        </a>
+                    </div>
+                    <div class="col-lg-3">
+                        <a href="assets/gallery/002.png" data-toggle="lightbox" data-gallery="gallery">
+                            <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/002.png">
+                        </a>
+                    </div>
+                    <div class="col-lg-3">
+                        <a href="assets/gallery/003.png" data-toggle="lightbox" data-gallery="gallery">
+                            <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/003.png">
+                        </a>
+                    </div>
+                    <div class="col-lg-3">
+                        <a href="assets/gallery/004.png" data-toggle="lightbox" data-gallery="gallery">
+                            <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/004.png">
+                        </a>
+                    </div>
+                    <div class="col-lg-3">
+                        <a href="assets/gallery/005.png" data-toggle="lightbox" data-gallery="gallery">
+                            <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/005.png">
+                        </a>
+                    </div>
+                    <div class="col-lg-3">
+                        <a href="assets/gallery/006.png" data-toggle="lightbox" data-gallery="gallery">
+                            <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/006.png">
+                        </a>
+                    </div>
+                    <div class="col-lg-3">
+                        <a href="assets/gallery/007.png" data-toggle="lightbox" data-gallery="gallery">
+                            <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/007.png">
+                        </a>
+                    </div>
+                    <div class="col-lg-3">
+                        <a href="assets/gallery/008.png" data-toggle="lightbox" data-gallery="gallery">
+                            <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/008.png">
+                        </a>
+                    </div>
+                    <div class="col-lg-3">
+                        <a href="assets/gallery/009.png" data-toggle="lightbox" data-gallery="gallery">
+                            <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/009.png">
+                        </a>
+                    </div>
+                    <div class="col-lg-3">
+                        <a href="assets/gallery/010.png" data-toggle="lightbox" data-gallery="gallery">
+                            <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/010.png">
+                        </a>
+                    </div>
+                    <div class="col-lg-3">
+                        <a href="assets/gallery/011.png" data-toggle="lightbox" data-gallery="gallery">
+                            <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/011.png">
+                        </a>
+                    </div>
+                    <div class="col-lg-3">
+                        <a href="assets/gallery/012.png" data-toggle="lightbox" data-gallery="gallery">
+                            <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/012.png">
+                        </a>
+                    </div>
+                </div>
+                <hr class="featurette-divider">
+                <div class="row featurette">
+                    <div class="col-md-12">
+                        <h2 class="featurette-heading">Got some questions? <span class="text-muted">Get in touch.</span></h2>
+                        <br>
+                        <table class="table table-hover table-borderless">
+                            <tbody>
+                                <tr>
+                                    <td>Akhil</td>
+                                    <td><a href="tel:+917396602734">+91 73966 02734</a></td>
+                                </tr>
+                                <tr>
+                                    <td>Shashidhar</td>
+                                    <td><a href="tel:+917330966475">+91 73309 66475</a></td>
+                                </tr>
+                                <tr>
+                                    <td>Aditya</td>
+                                    <td><a href="tel:+919542196003">+91 95421 96003</a></td>
+                                </tr>
+                                <tr>
+                                    <td>Harsha</td>
+                                    <td><a href="tel:+919652988096">+91 96529 88096</a></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <hr class="featurette-divider">
             </div>
+            <footer class="container">
+                <p>&copy; 2018-19 &mdash; Team CSI, GITAM Student Branch &middot; <a href="credits">Credits</a> &middot; <a href="https://github.com/csigitam/csigitam.github.io" target="_blank">GitHub</a> &middot; <a href="http://gitam.edu/in-campus/csi" target="_blank">CSI-GIT</a></p>
+            </footer>
         </div>
-        <div class="container marketing">
-            <div class="row">
-                <div class="col-lg-3">
-                    <a href="assets/gallery/001.png" data-toggle="lightbox" data-gallery="gallery">
-                        <img class="img img-thumbnail img-fluid " src="assets/gallery/thumbs/001.png">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="assets/gallery/002.png" data-toggle="lightbox" data-gallery="gallery">
-                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/002.png">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="assets/gallery/003.png" data-toggle="lightbox" data-gallery="gallery">
-                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/003.png">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="assets/gallery/004.png" data-toggle="lightbox" data-gallery="gallery">
-                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/004.png">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="assets/gallery/005.png" data-toggle="lightbox" data-gallery="gallery">
-                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/005.png">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="assets/gallery/006.png" data-toggle="lightbox" data-gallery="gallery">
-                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/006.png">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="assets/gallery/007.png" data-toggle="lightbox" data-gallery="gallery">
-                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/007.png">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="assets/gallery/008.png" data-toggle="lightbox" data-gallery="gallery">
-                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/008.png">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="assets/gallery/009.png" data-toggle="lightbox" data-gallery="gallery">
-                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/009.png">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="assets/gallery/010.png" data-toggle="lightbox" data-gallery="gallery">
-                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/010.png">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="assets/gallery/011.png" data-toggle="lightbox" data-gallery="gallery">
-                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/011.png">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="assets/gallery/012.png" data-toggle="lightbox" data-gallery="gallery">
-                        <img class="img img-thumbnail img-fluid" src="assets/gallery/thumbs/012.png">
-                    </a>
-                </div>
-            </div>
-            <hr class="featurette-divider">
-            <div class="row featurette">
-                <div class="col-md-12">
-                    <h2 class="featurette-heading">Got some questions? <span class="text-muted">Get in touch.</span></h2>
-                    <br>
-                    <table class="table table-hover table-borderless">
-                        <tbody>
-                            <tr>
-                                <td>Aditya</td>
-                                <td><a href="tel:+919542196003">+91 95421 96003</a></td>
-                            </tr>
-                            <tr>
-                                <td>Ajit</td>
-                                <td><a href="tel:+918895567749">+91 88955 67749</a></td>
-                            </tr>
-                            <tr>
-                                <td>Harsha</td>
-                                <td><a href="tel:+919652988096">+91 96529 88096</a></td>
-                            </tr>
-                            <tr>
-                                <td>Nikhil</td>
-                                <td><a href="tel:+918978087191">+91 89780 87191</a></td>
-                            </tr>
-                            <tr>
-                                <td>Subhash</td>
-                                <td><a href="tel:+919100062658">+91 91000 62658</a></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <hr class="featurette-divider">
-        </div>
-        <footer class="container">
-            <p>&copy; 2018-19 &mdash; Team CSI, GITAM Student Branch &middot; <a href="credits">Credits</a> &middot; <a href="https://github.com/csigitam/csigitam.github.io" target="_blank">GitHub</a> &middot; <a href="http://gitam.edu/in-campus/csi" target="_blank">CSI-GIT</a></p>
-        </footer>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.min.js"></script>
-    <script type="text/javascript">
-    $(document).on("click", '[data-toggle="lightbox"]', function(event) { event.preventDefault();
-        $(this).ekkoLightbox(); });
-    </script>
-</body>
-
-</html>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.min.js"></script>
+        <script type="text/javascript">
+            $(document).on("click", '[data-toggle="lightbox"]', function(event) { event.preventDefault();
+                $(this).ekkoLightbox(); });
+            </script>
+        </body>
+        
+        </html>
